# cppt

./: cppt
.cppt/: CMakeLists.txt  Makefile  functions.cc  functions.h  template.cc
